--- a/index.ipynb
+++ b/index.ipynb
@@ -404,12 +404,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    return len(restaurant['price'])<len(ale)\n",
+    "    return len(restaurant['price'])<len(alternative['price'])\n",
     "    pass"
    ]
   },
